3.4.0 2020xxxx
  BF: Service: Optimization of the overlay technique for header and footer
  CR: Project: Migration to Maven
  CR: Project: Migration to GitHub
  CR: License: Migration to Apache License 2.0
  CR: Designer: Added support for pure markup files
      Renders HTML templates without template implementation
  CR: Preview: Added support for pure markup files
      Renders HTML templates without template implementation
  CR: Examples: Added various examples
      single, multiple, with and without template implementation
  CR: Preview: Preview data of properties are now also available in header and footer
      Previously, only the static values were available there.         
  CR: Preview: Properties of the preview data are now always searched at the template location
    
3.3.0
  NT: Lost
  
3.2.0
  NT: Lost

3.1.0
  NT: Lost

3.0.0
  NT: Lost

2.0.0
  NT: Lost

1.0.0
  NT: Release is available