@@ -1,5 +1,6 @@
 3.4.0 2020xxxx
   BF: Service: Optimization of the overlay technique for header and footer
+  BF: Preview: Correction in the creation of MockUp lists
   CR: Project: Migration to Maven
   CR: Project: Migration to GitHub
   CR: License: Migration to Apache License 2.0
@@ -12,7 +13,12 @@
   CR: Preview: Preview data of properties are now also available in header and footer
       Previously, only the static values were available there.         
   CR: Preview: Properties of the preview data are now always searched at the template location
-    
+  CR: Template Generate: Change from placeholder 'data' to 'dataset'
+  CR: Preview: General optimization of the preview creation.
+  CR: Designer: General optimization of the preview creation.
+  CR: Designer: Harmonisation of data storage / PDF output
+      The output is now consistently at the place of the template 
+
 3.3.0
   NT: Lost
   
